Upgrade to gerami@0.1.4 --exact and make the necessary changes (note: this upgrade solves the Yoga spacing issues & improves the theme)

--- a/web/src/assets/styles/_theme.scss
+++ b/web/src/assets/styles/_theme.scss
@@ -1,6 +1,6 @@
 $primary: #3f51b5;
 $accent: #ff5722;
 
-$radius: 2px;
+$space: 20px;
 
 @import '~gerami/src/styles/theme';
