--- a/web/src/layout-admin/components/drawer/drawer.scss
+++ b/web/src/layout-admin/components/drawer/drawer.scss
@@ -1,9 +1,10 @@
 @import '../../../assets/styles/theme';
+
 .AdminDrawer {
   background-color: #fff;
   width: 250px !important;
   float: left;
-  filter: drop-shadow($shade-S);
+  filter: drop-shadow($text-shade-S);
 }
 
 .AdminDrawerContent {
