--- a/web/src/shared/components/layout/header/header.scss
+++ b/web/src/shared/components/layout/header/header.scss
@@ -7,7 +7,7 @@
 }
 
 .header-shade-area {
-  filter: drop-shadow($shade-S);
+  filter: drop-shadow($text-shade-S);
 }
 
 .header-block {
